<?xml version="1.0"?>
<package format="2">
  <name>pose_estimation_odom</name>
  <version>0.0.0</version>
  <description>Pose estimation using odometry package</description>
  <maintainer email="agrawalkhush2000@gmail.com">Khush Agrawal</maintainer>
  <license>NONE</license>
     <build_depend>message_generation</build_depend> 
     <exec_depend>message_runtime</exec_depend> 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msg</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msg</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msg</exec_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
